instantcurry/parser/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On THEOREM shift to state 1
-- On PRINT shift to state 157
-- On EOF shift to state 160
-- On DEFINITION shift to state 161
-- On CONST shift to state 190
-- On stmt shift to state 195
-- On program shift to state 197
## Reductions:

State 1:
## Known stack suffix:
## THEOREM
## LR(1) items:
stmt -> THEOREM . LPAR IDENT RPAR SEP FORALL nonempty_list(strict_arg) COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On LPAR shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## THEOREM LPAR
## LR(1) items:
stmt -> THEOREM LPAR . IDENT RPAR SEP FORALL nonempty_list(strict_arg) COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On IDENT shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## THEOREM LPAR IDENT
## LR(1) items:
stmt -> THEOREM LPAR IDENT . RPAR SEP FORALL nonempty_list(strict_arg) COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On RPAR shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## THEOREM LPAR IDENT RPAR
## LR(1) items:
stmt -> THEOREM LPAR IDENT RPAR . SEP FORALL nonempty_list(strict_arg) COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On SEP shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## THEOREM LPAR IDENT RPAR SEP
## LR(1) items:
stmt -> THEOREM LPAR IDENT RPAR SEP . FORALL nonempty_list(strict_arg) COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On FORALL shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## THEOREM LPAR IDENT RPAR SEP FORALL
## LR(1) items:
stmt -> THEOREM LPAR IDENT RPAR SEP FORALL . nonempty_list(strict_arg) COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On LPAR shift to state 7
-- On strict_arg shift to state 20
-- On nonempty_list(strict_arg) shift to state 22
## Reductions:

State 7:
## Known stack suffix:
## LPAR
## LR(1) items:
strict_arg -> LPAR . IDENT COLON ty RPAR [ LPAR COLON ]
## Transitions:
-- On IDENT shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## LPAR IDENT
## LR(1) items:
strict_arg -> LPAR IDENT . COLON ty RPAR [ LPAR COLON ]
## Transitions:
-- On COLON shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## LPAR IDENT COLON
## LR(1) items:
strict_arg -> LPAR IDENT COLON . ty RPAR [ LPAR COLON ]
## Transitions:
-- On TYVAR shift to state 10
-- On TYNAT shift to state 11
-- On LPAR shift to state 12
-- On ty shift to state 18
## Reductions:

State 10:
## Known stack suffix:
## TYVAR
## LR(1) items:
ty -> TYVAR . [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
## Reductions:
-- On TYLST TYARROW SEP RPAR EQ
--   reduce production ty -> TYVAR

State 11:
## Known stack suffix:
## TYNAT
## LR(1) items:
ty -> TYNAT . [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
## Reductions:
-- On TYLST TYARROW SEP RPAR EQ
--   reduce production ty -> TYNAT

State 12:
## Known stack suffix:
## LPAR
## LR(1) items:
ty -> LPAR . ty RPAR [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
-- On TYVAR shift to state 10
-- On TYNAT shift to state 11
-- On LPAR shift to state 12
-- On ty shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## LPAR ty
## LR(1) items:
ty -> ty . TYARROW ty [ TYLST TYARROW RPAR ]
ty -> ty . TYLST [ TYLST TYARROW RPAR ]
ty -> LPAR ty . RPAR [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
-- On TYLST shift to state 14
-- On TYARROW shift to state 15
-- On RPAR shift to state 17
## Reductions:

State 14:
## Known stack suffix:
## ty TYLST
## LR(1) items:
ty -> ty TYLST . [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
## Reductions:
-- On TYLST TYARROW SEP RPAR EQ
--   reduce production ty -> ty TYLST

State 15:
## Known stack suffix:
## ty TYARROW
## LR(1) items:
ty -> ty TYARROW . ty [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
-- On TYVAR shift to state 10
-- On TYNAT shift to state 11
-- On LPAR shift to state 12
-- On ty shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## ty TYARROW ty
## LR(1) items:
ty -> ty . TYARROW ty [ TYLST TYARROW SEP RPAR EQ ]
ty -> ty TYARROW ty . [ TYLST TYARROW SEP RPAR EQ ]
ty -> ty . TYLST [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
-- On TYLST shift to state 14
-- On TYARROW shift to state 15
## Reductions:
-- On SEP RPAR EQ
--   reduce production ty -> ty TYARROW ty

State 17:
## Known stack suffix:
## LPAR ty RPAR
## LR(1) items:
ty -> LPAR ty RPAR . [ TYLST TYARROW SEP RPAR EQ ]
## Transitions:
## Reductions:
-- On TYLST TYARROW SEP RPAR EQ
--   reduce production ty -> LPAR ty RPAR

State 18:
## Known stack suffix:
## LPAR IDENT COLON ty
## LR(1) items:
strict_arg -> LPAR IDENT COLON ty . RPAR [ LPAR COLON ]
ty -> ty . TYARROW ty [ TYLST TYARROW RPAR ]
ty -> ty . TYLST [ TYLST TYARROW RPAR ]
## Transitions:
-- On TYLST shift to state 14
-- On TYARROW shift to state 15
-- On RPAR shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## LPAR IDENT COLON ty RPAR
## LR(1) items:
strict_arg -> LPAR IDENT COLON ty RPAR . [ LPAR COLON ]
## Transitions:
## Reductions:
-- On LPAR COLON
--   reduce production strict_arg -> LPAR IDENT COLON ty RPAR

State 20:
## Known stack suffix:
## strict_arg
## LR(1) items:
nonempty_list(strict_arg) -> strict_arg . [ COLON ]
nonempty_list(strict_arg) -> strict_arg . nonempty_list(strict_arg) [ COLON ]
## Transitions:
-- On LPAR shift to state 7
-- On strict_arg shift to state 20
-- On nonempty_list(strict_arg) shift to state 21
## Reductions:
-- On COLON
--   reduce production nonempty_list(strict_arg) -> strict_arg

State 21:
## Known stack suffix:
## strict_arg nonempty_list(strict_arg)
## LR(1) items:
nonempty_list(strict_arg) -> strict_arg nonempty_list(strict_arg) . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production nonempty_list(strict_arg) -> strict_arg nonempty_list(strict_arg)

State 22:
## Known stack suffix:
## THEOREM LPAR IDENT RPAR SEP FORALL nonempty_list(strict_arg)
## LR(1) items:
stmt -> THEOREM LPAR IDENT RPAR SEP FORALL nonempty_list(strict_arg) . COLON eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On COLON shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## THEOREM LPAR IDENT RPAR SEP FORALL nonempty_list(strict_arg) COLON
## LR(1) items:
stmt -> THEOREM LPAR IDENT RPAR SEP FORALL nonempty_list(strict_arg) COLON . eqn COLON ty SEP proof [ THEOREM PRINT EOF DEFINITION CONST ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 82
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On eqn shift to state 85
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 24:
## Known stack suffix:
## NIL
## LR(1) items:
atom_tm -> NIL . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production atom_tm -> NIL

State 25:
## Known stack suffix:
## NATLIT
## LR(1) items:
atom_tm -> NATLIT . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production atom_tm -> NATLIT

State 26:
## Known stack suffix:
## MATCH
## LR(1) items:
key_tm -> MATCH . tm WITH BAR NIL ARROW tm BAR IDENT CONS IDENT ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 69
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 27:
## Known stack suffix:
## LPAR
## LR(1) items:
atom_tm -> LPAR . tm RPAR [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 67
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 28:
## Known stack suffix:
## IF0
## LR(1) items:
key_tm -> IF0 . tm THEN tm ELSE tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 61
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 29:
## Known stack suffix:
## IDENT
## LR(1) items:
atom_tm -> IDENT . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production atom_tm -> IDENT

State 30:
## Known stack suffix:
## FUN
## LR(1) items:
key_tm -> FUN . IDENT ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
key_tm -> FUN . LPAR IDENT RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
key_tm -> FUN . LPAR IDENT COLON ty RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On LPAR shift to state 31
-- On IDENT shift to state 57
## Reductions:

State 31:
## Known stack suffix:
## FUN LPAR
## LR(1) items:
key_tm -> FUN LPAR . IDENT RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
key_tm -> FUN LPAR . IDENT COLON ty RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On IDENT shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## FUN LPAR IDENT
## LR(1) items:
key_tm -> FUN LPAR IDENT . RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
key_tm -> FUN LPAR IDENT . COLON ty RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On RPAR shift to state 33
-- On COLON shift to state 51
## Reductions:

State 33:
## Known stack suffix:
## FUN LPAR IDENT RPAR
## LR(1) items:
key_tm -> FUN LPAR IDENT RPAR . ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On ARROW shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## FUN LPAR IDENT RPAR ARROW
## LR(1) items:
key_tm -> FUN LPAR IDENT RPAR ARROW . tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 35
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 35:
## Known stack suffix:
## FUN LPAR IDENT RPAR ARROW tm
## LR(1) items:
key_tm -> FUN LPAR IDENT RPAR ARROW tm . END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On END shift to state 36
## Reductions:

State 36:
## Known stack suffix:
## FUN LPAR IDENT RPAR ARROW tm END
## LR(1) items:
key_tm -> FUN LPAR IDENT RPAR ARROW tm END . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production key_tm -> FUN LPAR IDENT RPAR ARROW tm END

State 37:
## Known stack suffix:
## mul_tm
## LR(1) items:
addsub_tm -> mul_tm . [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
mul_tm -> mul_tm . TIMES key_tm [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On TIMES shift to state 38
## Reductions:
-- On WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production addsub_tm -> mul_tm

State 38:
## Known stack suffix:
## mul_tm TIMES
## LR(1) items:
mul_tm -> mul_tm TIMES . key_tm [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On key_tm shift to state 39
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
## Reductions:

State 39:
## Known stack suffix:
## mul_tm TIMES key_tm
## LR(1) items:
mul_tm -> mul_tm TIMES key_tm . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production mul_tm -> mul_tm TIMES key_tm

State 40:
## Known stack suffix:
## atom_tm
## LR(1) items:
app_tm -> atom_tm . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production app_tm -> atom_tm

State 41:
## Known stack suffix:
## app_tm
## LR(1) items:
app_tm -> app_tm . atom_tm [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
key_tm -> app_tm . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On LPAR shift to state 27
-- On IDENT shift to state 29
-- On atom_tm shift to state 42
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production key_tm -> app_tm

State 42:
## Known stack suffix:
## app_tm atom_tm
## LR(1) items:
app_tm -> app_tm atom_tm . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS NIL NATLIT MINUS LPAR IDENT EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production app_tm -> app_tm atom_tm

State 43:
## Known stack suffix:
## key_tm
## LR(1) items:
mul_tm -> key_tm . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production mul_tm -> key_tm

State 44:
## Known stack suffix:
## addsub_tm
## LR(1) items:
addsub_tm -> addsub_tm . PLUS mul_tm [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
addsub_tm -> addsub_tm . MINUS mul_tm [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
tm -> addsub_tm . CONS tm [ WITH THEOREM THEN SEP RPAR PRINT EQ EOF END ELSE DEFINITION DASH CONST COLON BAR ]
tm -> addsub_tm . [ WITH THEOREM THEN SEP RPAR PRINT EQ EOF END ELSE DEFINITION DASH CONST COLON BAR ]
## Transitions:
-- On PLUS shift to state 45
-- On MINUS shift to state 47
-- On CONS shift to state 49
## Reductions:
-- On WITH THEOREM THEN SEP RPAR PRINT EQ EOF END ELSE DEFINITION DASH CONST COLON BAR
--   reduce production tm -> addsub_tm

State 45:
## Known stack suffix:
## addsub_tm PLUS
## LR(1) items:
addsub_tm -> addsub_tm PLUS . mul_tm [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On mul_tm shift to state 46
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
## Reductions:

State 46:
## Known stack suffix:
## addsub_tm PLUS mul_tm
## LR(1) items:
addsub_tm -> addsub_tm PLUS mul_tm . [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
mul_tm -> mul_tm . TIMES key_tm [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On TIMES shift to state 38
## Reductions:
-- On WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production addsub_tm -> addsub_tm PLUS mul_tm

State 47:
## Known stack suffix:
## addsub_tm MINUS
## LR(1) items:
addsub_tm -> addsub_tm MINUS . mul_tm [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On mul_tm shift to state 48
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
## Reductions:

State 48:
## Known stack suffix:
## addsub_tm MINUS mul_tm
## LR(1) items:
addsub_tm -> addsub_tm MINUS mul_tm . [ WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
mul_tm -> mul_tm . TIMES key_tm [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On TIMES shift to state 38
## Reductions:
-- On WITH THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production addsub_tm -> addsub_tm MINUS mul_tm

State 49:
## Known stack suffix:
## addsub_tm CONS
## LR(1) items:
tm -> addsub_tm CONS . tm [ WITH THEOREM THEN SEP RPAR PRINT EQ EOF END ELSE DEFINITION DASH CONST COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 50
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 50:
## Known stack suffix:
## addsub_tm CONS tm
## LR(1) items:
tm -> addsub_tm CONS tm . [ WITH THEOREM THEN SEP RPAR PRINT EQ EOF END ELSE DEFINITION DASH CONST COLON BAR ]
## Transitions:
## Reductions:
-- On WITH THEOREM THEN SEP RPAR PRINT EQ EOF END ELSE DEFINITION DASH CONST COLON BAR
--   reduce production tm -> addsub_tm CONS tm

State 51:
## Known stack suffix:
## FUN LPAR IDENT COLON
## LR(1) items:
key_tm -> FUN LPAR IDENT COLON . ty RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On TYVAR shift to state 10
-- On TYNAT shift to state 11
-- On LPAR shift to state 12
-- On ty shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## FUN LPAR IDENT COLON ty
## LR(1) items:
key_tm -> FUN LPAR IDENT COLON ty . RPAR ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
ty -> ty . TYARROW ty [ TYLST TYARROW RPAR ]
ty -> ty . TYLST [ TYLST TYARROW RPAR ]
## Transitions:
-- On TYLST shift to state 14
-- On TYARROW shift to state 15
-- On RPAR shift to state 53
## Reductions:

State 53:
## Known stack suffix:
## FUN LPAR IDENT COLON ty RPAR
## LR(1) items:
key_tm -> FUN LPAR IDENT COLON ty RPAR . ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On ARROW shift to state 54
## Reductions:

State 54:
## Known stack suffix:
## FUN LPAR IDENT COLON ty RPAR ARROW
## LR(1) items:
key_tm -> FUN LPAR IDENT COLON ty RPAR ARROW . tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 55
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 55:
## Known stack suffix:
## FUN LPAR IDENT COLON ty RPAR ARROW tm
## LR(1) items:
key_tm -> FUN LPAR IDENT COLON ty RPAR ARROW tm . END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On END shift to state 56
## Reductions:

State 56:
## Known stack suffix:
## FUN LPAR IDENT COLON ty RPAR ARROW tm END
## LR(1) items:
key_tm -> FUN LPAR IDENT COLON ty RPAR ARROW tm END . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production key_tm -> FUN LPAR IDENT COLON ty RPAR ARROW tm END

State 57:
## Known stack suffix:
## FUN IDENT
## LR(1) items:
key_tm -> FUN IDENT . ARROW tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On ARROW shift to state 58
## Reductions:

State 58:
## Known stack suffix:
## FUN IDENT ARROW
## LR(1) items:
key_tm -> FUN IDENT ARROW . tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 59
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 59:
## Known stack suffix:
## FUN IDENT ARROW tm
## LR(1) items:
key_tm -> FUN IDENT ARROW tm . END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On END shift to state 60
## Reductions:

State 60:
## Known stack suffix:
## FUN IDENT ARROW tm END
## LR(1) items:
key_tm -> FUN IDENT ARROW tm END . [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
## Reductions:
-- On WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR
--   reduce production key_tm -> FUN IDENT ARROW tm END

State 61:
## Known stack suffix:
## IF0 tm
## LR(1) items:
key_tm -> IF0 tm . THEN tm ELSE tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On THEN shift to state 62
## Reductions:

State 62:
## Known stack suffix:
## IF0 tm THEN
## LR(1) items:
key_tm -> IF0 tm THEN . tm ELSE tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On NIL shift to state 24
-- On NATLIT shift to state 25
-- On MATCH shift to state 26
-- On LPAR shift to state 27
-- On IF0 shift to state 28
-- On IDENT shift to state 29
-- On FUN shift to state 30
-- On tm shift to state 63
-- On mul_tm shift to state 37
-- On key_tm shift to state 43
-- On atom_tm shift to state 40
-- On app_tm shift to state 41
-- On addsub_tm shift to state 44
## Reductions:

State 63:
## Known stack suffix:
## IF0 tm THEN tm
## LR(1) items:
key_tm -> IF0 tm THEN tm . ELSE tm END [ WITH TIMES THEOREM THEN SEP RPAR PRINT PLUS MINUS EQ EOF END ELSE DEFINITION DASH CONST CONS COLON BAR ]
## Transitions:
-- On ELSE shift to state 64
## Reductions:
